[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["ramilabd <ramsmart@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
wemake-python-styleguide = "^0.17.0"
add-trailing-comma = "^2.4.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
